--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/TravelTheme" >
+        android:theme="@style/TravelTheme.Sherlock" >
         <!-- 启动画面 -->
         <activity
             android:name="com.android.travel.activity.SplashActivity"
